// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render select with 1 selected option 1`] = `
<Select
  className=""
  errorText=""
  isControlled={false}
  label=""
  name="test-name"
  onChange={[Function]}
  options={
    Object {
      "DE": "Germany",
      "US": "United states",
    }
  }
  placeholder=""
  translateErrorText={true}
  value="DE"
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={true}
    htmlFor="test-name"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv formElement"
    >
      <Placeholder
        aria-hidden={true}
        placeholder=""
        visible={false}
      >
        <div
          aria-hidden={true}
          className="css-rkuo1o css-1jyyyen placeholder"
        >
          <Translate
            className={null}
            params={Object {}}
            role={null}
            string=""
          />
        </div>
      </Placeholder>
      <Label
        hasErrorMessage={false}
        htmlFor="test-name"
        isFloating={true}
        isFocused={false}
        label=""
      >
        <label
          className="css-1nn9zl4 css-1r91c0g css-1jyyyen label"
          htmlFor="test-name"
        >
          <Translate
            className={null}
            params={Object {}}
            role={null}
            string=""
          />
        </label>
      </Label>
      <select
        className="css-zao20y select"
        id="test-name"
        name="test-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value="DE"
      >
        <option
          className="option"
          key="test-name_DE"
          value="DE"
        >
          Germany
        </option>
        <option
          className="option"
          key="test-name_US"
          value="US"
        >
          United states
        </option>
      </select>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              Object {
                "borderBottomColor": "#fa5400",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
      <ErrorText
        className={null}
        errorText=""
        translate={true}
      >
        <div
          className="css-hyvrm8 errorText"
        >
          <Translate
            className={null}
            params={Object {}}
            role={null}
            string=""
          />
        </div>
      </ErrorText>
    </div>
  </FormElement>
</Select>
`;

exports[`<Select /> should render select with 2 options 1`] = `
<Select
  className=""
  errorText=""
  isControlled={false}
  label=""
  name="test-name"
  onChange={[Function]}
  options={
    Object {
      "DE": "Germany",
      "US": "United states",
    }
  }
  placeholder=""
  translateErrorText={true}
  value=""
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-name"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv formElement"
    >
      <Placeholder
        aria-hidden={true}
        placeholder=""
        visible={true}
      >
        <div
          aria-hidden={true}
          className="css-rkuo1o placeholder"
        >
          <Translate
            className={null}
            params={Object {}}
            role={null}
            string=""
          />
        </div>
      </Placeholder>
      <Label
        hasErrorMessage={false}
        htmlFor="test-name"
        isFloating={false}
        isFocused={false}
        label=""
      >
        <label
          className="css-1nn9zl4 css-1jyyyen label"
          htmlFor="test-name"
        >
          <Translate
            className={null}
            params={Object {}}
            role={null}
            string=""
          />
        </label>
      </Label>
      <select
        className="css-zao20y select"
        id="test-name"
        name="test-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <option
          className="option"
          key="test-name_DE"
          value="DE"
        >
          Germany
        </option>
        <option
          className="option"
          key="test-name_US"
          value="US"
        >
          United states
        </option>
      </select>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              Object {
                "borderBottomColor": "#fa5400",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
      <ErrorText
        className={null}
        errorText=""
        translate={true}
      >
        <div
          className="css-hyvrm8 errorText"
        >
          <Translate
            className={null}
            params={Object {}}
            role={null}
            string=""
          />
        </div>
      </ErrorText>
    </div>
  </FormElement>
</Select>
`;

exports[`<Select /> should render select with no options 1`] = `
<Select
  className=""
  errorText=""
  isControlled={false}
  label=""
  name="test-name"
  onChange={[Function]}
  options={Object {}}
  placeholder=""
  translateErrorText={true}
  value=""
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-name"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv formElement"
    >
      <Placeholder
        aria-hidden={true}
        placeholder=""
        visible={true}
      >
        <div
          aria-hidden={true}
          className="css-rkuo1o placeholder"
        >
          <Translate
            className={null}
            params={Object {}}
            role={null}
            string=""
          />
        </div>
      </Placeholder>
      <Label
        hasErrorMessage={false}
        htmlFor="test-name"
        isFloating={false}
        isFocused={false}
        label=""
      >
        <label
          className="css-1nn9zl4 css-1jyyyen label"
          htmlFor="test-name"
        >
          <Translate
            className={null}
            params={Object {}}
            role={null}
            string=""
          />
        </label>
      </Label>
      <select
        className="css-zao20y select"
        id="test-name"
        name="test-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      />
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              Object {
                "borderBottomColor": "#fa5400",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
      <ErrorText
        className={null}
        errorText=""
        translate={true}
      >
        <div
          className="css-hyvrm8 errorText"
        >
          <Translate
            className={null}
            params={Object {}}
            role={null}
            string=""
          />
        </div>
      </ErrorText>
    </div>
  </FormElement>
</Select>
`;
